
/* Class = "UILabel"; text = "My Topics"; ObjectID = "0G7-fU-CuP"; */
"0G7-fU-CuP.text" = "My Topics";

/* Class = "UILabel"; text = "Create a new team"; ObjectID = "2eF-zW-ZlG"; */
"2eF-zW-ZlG.text" = "Create a new team";

/* Class = "UILabel"; text = "Topic"; ObjectID = "4Ud-ZO-HdC"; */
"4Ud-ZO-HdC.text" = "Topic";

/* Class = "UILabel"; text = "When"; ObjectID = "4bI-h6-faN"; */
"4bI-h6-faN.text" = "When";

/* Class = "UITextField"; placeholder = "Email"; ObjectID = "6vg-UG-eAB"; */
"6vg-UG-eAB.placeholder" = "Email";

/* Class = "UIButton"; normalTitle = "Sign In"; ObjectID = "9wN-Ke-SEM"; */
"9wN-Ke-SEM.normalTitle" = "Sign In";

/* Class = "UIButton"; normalTitle = "Go"; ObjectID = "9yc-pk-ljP"; */
"9yc-pk-ljP.normalTitle" = "Go";

/* Class = "UITextField"; placeholder = "Username"; ObjectID = "Axg-ob-q0b"; */
"Axg-ob-q0b.placeholder" = "Username";

/* Class = "UIButton"; normalTitle = "Sign Up"; ObjectID = "C1u-My-kQW"; */
"C1u-My-kQW.normalTitle" = "Sign Up";

/* Class = "UILabel"; text = "Message"; ObjectID = "Ed4-3R-qkR"; */
"Ed4-3R-qkR.text" = "Message";

/* Class = "UIButton"; normalTitle = "Send Request"; ObjectID = "Ie1-LK-m1i"; */
"Ie1-LK-m1i.normalTitle" = "Send Request";

/* Class = "UIButton"; normalTitle = "Sign Up"; ObjectID = "JVD-7L-Ab0"; */
"JVD-7L-Ab0.normalTitle" = "Sign Up";

/* Class = "UIButton"; normalTitle = "Create Team"; ObjectID = "LlV-JF-2Lk"; */
"LlV-JF-2Lk.normalTitle" = "Create Team";

/* Class = "UITextField"; placeholder = "Team Name"; ObjectID = "Moy-Rd-2Cn"; */
"Moy-Rd-2Cn.placeholder" = "Team Name";

/* Class = "UITextField"; placeholder = "Username"; ObjectID = "N4x-KO-VIS"; */
"N4x-KO-VIS.placeholder" = "Username";

/* Class = "UIButton"; normalTitle = "Home"; ObjectID = "NZt-5J-PuY"; */
"NZt-5J-PuY.normalTitle" = "Home";

/* Class = "UITextField"; placeholder = "Name"; ObjectID = "P6Z-Tn-z7G"; */
"P6Z-Tn-z7G.placeholder" = "Name";

/* Class = "UITextField"; placeholder = "Repeat Password"; ObjectID = "PIN-Zw-1xS"; */
"PIN-Zw-1xS.placeholder" = "Repeat Password";

/* Class = "UIButton"; normalTitle = "Settings"; ObjectID = "R3H-YL-uv1"; */
"R3H-YL-uv1.normalTitle" = "Settings";

/* Class = "UIBarButtonItem"; title = "Chat"; ObjectID = "SNL-za-AqO"; */
"SNL-za-AqO.title" = "Chat";

/* Class = "UINavigationItem"; title = "Document"; ObjectID = "USF-5o-XfX"; */
"USF-5o-XfX.title" = "Document";

/* Class = "UILabel"; text = "Or join an existing topic"; ObjectID = "W3W-9R-R8t"; */
"W3W-9R-R8t.text" = "Or join an existing topic";

/* Class = "UITextField"; placeholder = "Password"; ObjectID = "bGl-aJ-Ek7"; */
"bGl-aJ-Ek7.placeholder" = "Password";

/* Class = "UIBarButtonItem"; title = "Docs"; ObjectID = "bRO-fd-KOx"; */
"bRO-fd-KOx.title" = "Docs";

/* Class = "UILabel"; text = "99+"; ObjectID = "bdi-ZI-Ew4"; */
"bdi-ZI-Ew4.text" = "99+";

/* Class = "UIBarButtonItem"; title = "Menu"; ObjectID = "cLn-gR-ov7"; */
"cLn-gR-ov7.title" = "Menu";

/* Class = "UITextField"; placeholder = "Team Name"; ObjectID = "dg4-Nx-u52"; */
"dg4-Nx-u52.placeholder" = "Team Name";

/* Class = "UITextField"; placeholder = "Password"; ObjectID = "eoW-RA-sJz"; */
"eoW-RA-sJz.placeholder" = "Password";

/* Class = "UILabel"; text = "Welcome to Collara"; ObjectID = "ghY-QB-6Y2"; */
"ghY-QB-6Y2.text" = "Welcome to Collara";

/* Class = "UINavigationItem"; title = "Chat"; ObjectID = "iDk-6w-F7j"; */
"iDk-6w-F7j.title" = "Chat";

/* Class = "UITextField"; placeholder = "Name"; ObjectID = "ieG-St-eJJ"; */
"ieG-St-eJJ.placeholder" = "Name";

/* Class = "UILabel"; text = "Only letters and \"-\" please"; ObjectID = "lRr-MZ-gLy"; */
"lRr-MZ-gLy.text" = "Only letters and \"-\" please";

/* Class = "UISegmentedControl"; qZ5-mw-GTl.segmentTitles[0] = "Topics"; ObjectID = "qZ5-mw-GTl"; */
"qZ5-mw-GTl.segmentTitles[0]" = "Topics";

/* Class = "UISegmentedControl"; qZ5-mw-GTl.segmentTitles[1] = "Members"; ObjectID = "qZ5-mw-GTl"; */
"qZ5-mw-GTl.segmentTitles[1]" = "Members";

/* Class = "UILabel"; text = "User"; ObjectID = "r2a-nj-fdg"; */
"r2a-nj-fdg.text" = "User";

/* Class = "UIButton"; normalTitle = "Sign In"; ObjectID = "rhd-Pn-tdl"; */
"rhd-Pn-tdl.normalTitle" = "Sign In";

/* Class = "UILabel"; text = "Create a new topic"; ObjectID = "urC-OO-6Jd"; */
"urC-OO-6Jd.text" = "Create a new topic";

/* Class = "UIButton"; normalTitle = "Forgot Password"; ObjectID = "vgh-Ic-yXL"; */
"vgh-Ic-yXL.normalTitle" = "Forgot Password";

/* Class = "UILabel"; text = "Request to join a team"; ObjectID = "xNi-xF-Kk5"; */
"xNi-xF-Kk5.text" = "Request to join a team";

/* Class = "UIBarButtonItem"; title = "Chat"; ObjectID = "zun-6c-983"; */
"zun-6c-983.title" = "Chat";
