...
"Members" = "Members";
"Alerts" = "Alerts"; 
"Send Invite" = "Send Invite";
"Invitation sent" = "Invitation sent";
"Select users to invite" = "Select users to invite";
"Team members (%@)" = "Team members (%@)";
"Topic Settings" = "Topic Settings";
"Create Topic" = "Create Topic";
"Pick Your Team" = "Pick Your Team";
"We are terribly sorry, but some error happened." = "We are terribly sorry, but some error happened.";
"We are terribly sorry, but we can not sign you in now." = "We are terribly sorry, but we can not sign you in now.";
"Oops, an empty username won't get very far." = "Oops, an empty username won't get very far.";
"Oops, an empty name won't get very far." = "Oops, an empty name won't get very far.";
"Oops, an empty password won't get very far." = "Oops, an empty password won't get very far.";
...
